--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "html-react-parser": "^5.1.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "next": "14.1.4",
